--- a/.github/workflows/deploy-cloudflare-worker.yaml
+++ b/.github/workflows/deploy-cloudflare-worker.yaml
@@ -65,9 +65,9 @@ jobs:
           mv package.json package.json.bak || true
           mv yarn.lock yarn.lock.bak || true
           cd apps/client 
-          npm install
+          npm ci
           cd ../../apps/cloudflare-worker
-          npm install
+          npm ci
           cd ../../
           mv package.json.bak package.json || true
           mv yarn.lock.bak yarn.lock || true
