--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -33,6 +33,32 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: "24"
+          
+      - name: Create .env file
+        run: |
+          echo -n ${{ secrets.AUTH0_AUDIENCE }} | sed -n 's/http.:\/\/\(.*\)\/.*/DOMAIN_NAME=\1\n/p' > .env
+
+          echo "AUTH0_DOMAIN=${{ secrets.AUTH0_DOMAIN }}" >> .env
+          echo "AUTH0_CLIENT_ID=${{ secrets.AUTH0_CLIENT_ID }}" >> .env
+          echo "AUTH0_CLIENT_SECRET=${{ secrets.AUTH0_CLIENT_SECRET }}" >> .env
+          echo "AUTH0_MANAGEMENT_CLIENT_ID=${{ secrets.AUTH0_MANAGEMENT_API_CLIENT_ID }}" >> .env
+          echo "AUTH0_MANAGEMENT_CLIENT_SECRET=${{ secrets.AUTH0_MANAGEMENT_API_CLIENT_SECRET }}" >> .env
+          echo "ADMIN_AUTH0_PERMISSION=\"${{ vars.ADMIN_AUTH0_PERMISSION }}\"" >> .env
+          echo "AUTHENTICATION_PROVIDER_TYPE=\"${{ vars.AUTHENTICATION_PROVIDER_TYPE }}\"" >> .env
+          echo "AUTH0_SCOPE=\"${{ vars.AUTH0_SCOPE }}\"" >> .env
+          echo "AUTH0_AUDIENCE=${{ secrets.AUTH0_AUDIENCE }}" >> .env
+          echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" >> .env
+          echo "CORS_ORIGIN=${{ secrets.CORS_ORIGIN }}" >> .env
+          echo "READ_PERMISSION=${{ vars.READ_PERMISSION }}" >> .env
+          echo "WRITE_PERMISSION=${{ vars.WRITE_PERMISSION }}" >> .env
+          echo "ADMIN_PERMISSION=${{ vars.ADMIN_PERMISSION }}" >> .env
+          echo "SEARCH_PERMISSION=${{ vars.SEARCH_PERMISSION }}" >> .env
+          echo "DB_BACKEND=${{ vars.DB_BACKEND }}" >> .env
+          echo "BACKUP_PERMISSION=${{ vars.BACKUP_PERMISSION }}" >> .env
+          echo "DB_MAX_IMAGE_SIZE=${{ vars.DB_MAX_IMAGE_SIZE }}" >> .env
+          echo "AMAZON_BASE_URL=${{ vars.AMAZON_BASE_URL }}" >> .env
+          echo "PAYPAL_TRANSACTION_BASE_URL=${{ secrets.PAYPAL_TRANSACTION_BASE_URL }}" >> .env
+          cat .env
 
       - name: Install dependencies
         if: true # Temporarily disabled to work around bug
